--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.1 | April 10, 2022
+// Version: 9.8.2 | April 11, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -29,12 +29,11 @@ cl_smoothtime .05 // Decrease smooth time to reject large prediction errors fast
 //net_splitrate 1 // Number of fragments for a splitpacket that can be sent per frame
 //net_udp_rcvbuf 131072 // Game does not handle overflows correctly, so no point in setting this lower
 net_chokeloop 1 // Early check for multiplayer
-//sv_lan 1 // Protect local servers
-//tf_mm_strict 1 // ^
-cl_localnetworkbackdoor 0 // Fast path to skip backdoor
+sv_lan 1 // Protect local servers
+cl_localnetworkbackdoor 0 // Fast path for multiplayer to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
 //cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
-net_blockmsg 0 // Skip filtering faster
+net_blockmsg 0 // Skip packet filtering faster
 
 // Directly forward string cmds to server for lower latency
 alias resetclass"cmd resetclass"
@@ -374,7 +373,7 @@ cat_ipc_exec_all quit smoking
 //cl_drawmonitors 1 // Draw monitors in HL2 and CS
 //muzzleflash_light 1 // Muzzle flash lights
 //cl_fasttempentcollision 10 // Check every x ticks for collisions on syringes and pomson
-//cl_fasttempentcollision 1000000 // Never check collision
+//cl_fasttempentcollision 1000000 // Never check collision, let it just timeout instead
 //cl_fasttempentcollision 0 // Always check collision
 
 alias effects_low"tracer_extra 0;r_drawtracers_firstperson 0;cl_show_splashes 0;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 0;muzzleflash_light 0;cl_fasttempentcollision 1000000;alias effects_level echo effects=low"
