--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.1 | April 10, 2022
+// Version: 9.8.2 | April 11, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -30,10 +30,10 @@ cl_smoothtime .05 // Decrease smooth time to reject large prediction errors fast
 //net_udp_rcvbuf 131072 // Game does not handle overflows correctly, so no point in setting this lower
 net_chokeloop 1 // Early check for multiplayer
 sv_lan 1 // Protect local servers
-tf_mm_strict 1 // ^
-cl_localnetworkbackdoor 0 // Fast path to skip backdoor
+cl_localnetworkbackdoor 0 // Fast path for multiplayer to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
 //cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
+net_blockmsg 0 // Skip packet filtering faster
 
 // Directly forward string cmds to server for lower latency
 alias resetclass"cmd resetclass"
@@ -239,7 +239,7 @@ cl_muzzleflash_dlight_1st 0 // Disable dynamic light from muzzle flash in DoD an
 cl_drawmonitors 0 // Draw monitors in HL2 and CS
 muzzleflash_light 0 // Muzzle flash lights
 //cl_fasttempentcollision 10 // Check every x ticks for collisions on syringes and pomson
-cl_fasttempentcollision 1000000 // Never check collision
+cl_fasttempentcollision 1000000 // Never check collision, let it just timeout instead
 //cl_fasttempentcollision 0 // Always check collision
 
 // -------------
@@ -1259,7 +1259,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.8.1 | April 10, 2022"
+alias version_comfig"echo mastercomfig version: 9.8.2 | April 11, 2022"
 
 // Echo
 echo""
@@ -1273,8 +1273,8 @@ echo""
 echo""
 echo"  **********************************"
 echo"  **********************************"
-echo"  mastercomfig 9.8.1 loaded"
-echo"  April 10, 2022"
+echo"  mastercomfig 9.8.2 loaded"
+echo"  April 11, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1282,7 +1282,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 6 hours to produce."
+echo"  This release took 3 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
