--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -29,11 +29,20 @@ cl_smoothtime .05 // Decrease smooth time to reject large prediction errors fast
 //net_splitrate 1 // Number of fragments for a splitpacket that can be sent per frame
 //net_udp_rcvbuf 131072 // Game does not handle overflows correctly, so no point in setting this lower
 net_chokeloop 1 // Early check for multiplayer
-sv_lan 1 // Protect local servers
 cl_localnetworkbackdoor 0 // Fast path for multiplayer to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
 //cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
 net_blockmsg 0 // Skip packet filtering faster
+
+// ---------------------
+// '-- Local Servers --'
+// ---------------------
+// Tunes local servers for quality of life
+
+sv_lan 1 // Protect local servers
+hide_server 1 // Hide server from server list
+tf_mm_strict 2 // Set "hidden" tag for server list
+mp_waitingforplayers_time 0 // Do not wait for players, get into the game immediately
 
 // Directly forward string cmds to server for lower latency
 alias resetclass"cmd resetclass"
