improve packet drop docs

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -18,8 +18,8 @@
 // ---------------
 // Optimizes for better networking
 
-net_maxpacketdrop 0 // Use all packets
-//net_maxpacketdrop 5000 // Use default packet drop threshold
+net_maxpacketdrop 0 // Use all packets, helps people with spotty connections keep playing
+//net_maxpacketdrop 5000 // Use default packet drop threshold, to be more strict about networking
 cl_timeout 60 // Max client timeout
 //cl_smooth 1 // Do not instantly correct prediction errors, as they are predominantly small enough to be smoothed over with negligible error and has less distracting jitters in view
 cl_smoothtime .05 // Decrease smooth time to reject large prediction errors faster
