snapshot buffer fixes

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -113,8 +113,9 @@ alias snapshot_buffer_auto"alias snapshot_buffer_level echo snapshot_buffer=auto
 alias snapshot_buffer_high"cl_interp_ratio 3;setinfo cl_interp_ratio 3;interp_high;alias snapshot_buffer_level echo snapshot_buffer=high"
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
 alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer=low"
+alias snapshot_buffer_custom"alias snapshot_buffer_auto;alias snapshot_buffer_high;alias snapshot_buffer_safe;alias snapshot_buffer_low;alias net_hitscan;alias net_projectiles;alias net_spy;alias snapshot_buffer_level echo snapshot_buffer=custom"
 
-alias snapshot_buffer snapshot_buffer_safe
+alias snapshot_buffer snapshot_buffer_auto
 
 alias net_hitscan snapshot_buffer_safe // Scout, Heavy, Engineer, Sniper
 alias net_projectiles snapshot_buffer_low // Soldier, Pyro, Demoman, Medic
@@ -1706,6 +1707,7 @@ alias snapshot_buffer=auto"alias snapshot_buffer snapshot_buffer_auto"
 alias snapshot_buffer=high"alias snapshot_buffer snapshot_buffer_high"
 alias snapshot_buffer=safe"alias snapshot_buffer snapshot_buffer_safe"
 alias snapshot_buffer=low"alias snapshot_buffer snapshot_buffer_low"
+alias snapshot_buffer=custom"alias snapshot_buffer snapshot_buffer_custom"
 alias packet_size=small"alias packet_size packet_size_small"
 alias packet_size=conservative"alias packet_size packet_size_conservative"
 alias packet_size=saver"alias packet_size packet_size_saver"
