--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -31,8 +31,8 @@
 //packet_rate=standard
 // standard, congestion
 
-//snapshot_buffer=safe
-// auto, low, safe, high
+//snapshot_buffer=auto
+// auto, low, safe, high, custom
 
 //packet_size=speed
 // speed, saver, conservative, small
