--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.2 | April 11, 2022
+// Version: 9.9.0 | May 6, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -166,8 +166,6 @@ alias bandwidth_8.0Mbps"rate 1048576;alias bandwidth_level echo bandwidth=8.0Mbp
 
 alias bandwidth bandwidth_1.0Mbps
 
-alias cat_mm_queue_casual"quit smoking"
-
 // -------------
 // '-- Files --'
 // -------------
@@ -188,6 +186,8 @@ alias download_nothing"cl_downloadfilter none;alias download_level echo download
 
 alias download download_auto
 
+alias cat_mm_queue_casual"quit trolling"
+
 // -------------------
 // '-- Matchmaking --'
 // -------------------
@@ -203,6 +203,8 @@ sdr_spew_level 0 // Disable SDR output
 //tf_datacenter_ping_debug 1 // Enable debugging for server routing
 //tf_datacenter_ping_dump // Dump server routing debug info
 //tf_mm_dump_match_invites // Show current match invites
+//tf_mm_custom_ping_enabled 1 // Enable custom ping tolerance
+//tf_mm_custom_ping 50 // Ping tolerance for matchmaking
 
 //tf_party_join_request_mode 1 // Mode for party join requests: 0 - open join, 1 - request join, 2 - invite join.
 
@@ -212,25 +214,11 @@ alias party_mode_invite"tf_party_join_request_mode 2;alias party_mode_level echo
 
 alias party_mode party_mode_request
 
-//tf_mm_custom_ping_enabled 1 // Enable custom ping tolerance
-//tf_mm_custom_ping 50 // Ping tolerance for matchmaking
-
-alias ping_tolerance_off"tf_mm_custom_ping_enabled 0;alias ping_tolerance_level echo ping_tolerance=off"
-alias ping_tolerance_25"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 25;alias ping_tolerance_level echo ping_tolerance=25"
-alias ping_tolerance_50"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 50;alias ping_tolerance_level echo ping_tolerance=50"
-alias ping_tolerance_60"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 60;alias ping_tolerance_level echo ping_tolerance=60"
-alias ping_tolerance_70"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 70;alias ping_tolerance_level echo ping_tolerance=70"
-alias ping_tolerance_80"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 80;alias ping_tolerance_level echo ping_tolerance=80"
-alias ping_tolerance_90"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 90;alias ping_tolerance_level echo ping_tolerance=90"
-alias ping_tolerance_100"tf_mm_custom_ping_enabled 1;tf_mm_custom_ping 100;alias ping_tolerance_level echo ping_tolerance=100"
-
-alias ping_tolerance ping_tolerance_50
-
 // ===================
 // '--- Rendering ---'
 // ===================
 // -----------------------
-// '-- Level of Detail --'
+// '-- Model Quality --'
 // -----------------------
 // Controls the quality of objects based on distance
 
@@ -297,13 +285,13 @@ r_hunkalloclightmaps 0 // Use native memory allocation because z buffer cache ta
 
 alias lightmaps_off"toggle mat_filterlightmaps"
 
-alias lighting_very_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;building_cubemaps 1;alias lighting_level echo lighting=very_low"
-alias lighting_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0004;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;building_cubemaps 1;alias lighting_level echo lighting=low"
-alias lighting_medium"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;building_cubemaps 1;alias lighting_level echo lighting=medium"
-alias lighting_medium_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;building_cubemaps 0;alias lighting_level echo lighting=medium_high"
-alias lighting_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;building_cubemaps 0;alias lighting_level echo lighting=high"
-alias lighting_very_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;building_cubemaps 0;alias lighting_level echo lighting=very_high"
-alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;building_cubemaps 0;alias lighting_level echo lighting=ultra"
+alias lighting_very_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=very_low"
+alias lighting_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0004;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=low"
+alias lighting_medium"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;r_pixelvisibility_partial 0;alias lighting_level echo lighting=medium"
+alias lighting_medium_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;r_pixelvisibility_partial 1;alias lighting_level echo lighting=medium_high"
+alias lighting_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=high"
+alias lighting_very_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=very_high"
+alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=ultra"
 
 alias lighting
 
@@ -357,8 +345,6 @@ alias flashlight_on"mat_supportflashlight 1;r_flashlightculldepth 1;r_flashlight
 
 alias flashlight
 
-cat_ipc_exec_all quit smoking
-
 // ---------------
 // '-- Effects --'
 // ---------------
@@ -384,6 +370,8 @@ alias effects_high"tracer_extra 1;r_drawtracers_firstperson 1;cl_show_splashes 1
 alias effects_ultra"tracer_extra 1;r_drawtracers_firstperson 1;cl_show_splashes 1;cl_ejectbrass 1;cl_muzzleflash_dlight_1st 1;cl_drawmonitors 1;muzzleflash_light 1;cl_fasttempentcollision 0;alias effects_level echo effects=ultra"
 
 alias effects
+
+cat_ipc_exec_all quit trolling
 
 // -------------
 // '-- Water --'
@@ -437,9 +425,9 @@ alias water
 //cl_particle_retire_cost .0001 // Remove particles larger than this fraction of 1000 screen area (does not work in autoexec)
 //cl_particle_retire_cost 0 // Disable particle retirement (does not work in autoexec)
 
-alias particles_very_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 2;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 0;cl_particle_retire_cost .0001;alias particles_level echo particles=very_low"
-alias particles_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 0;cl_particle_retire_cost .0001;alias particles_level echo particles=low"
-alias particles_medium"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 1;cl_particle_retire_cost .0001;alias particles_level echo particles=medium"
+alias particles_very_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 2;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 0;cl_particle_retire_cost 0;alias particles_level echo particles=very_low"
+alias particles_low"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 0;cl_particle_retire_cost 0;alias particles_level echo particles=low"
+alias particles_medium"tf_impactwatertimeenable 1;fx_drawimpactdebris 0;fx_drawimpactdust 0;fx_drawmetalspark 0;cl_particle_batch_mode 1;tf_particles_disable_weather 1;mat_reduceparticles 1;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=medium"
 alias particles_high"tf_impactwatertimeenable 0;fx_drawimpactdebris 1;fx_drawimpactdust 1;fx_drawmetalspark 1;cl_particle_batch_mode 1;tf_particles_disable_weather 0;mat_reduceparticles 0;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=high"
 alias particles_ultra"tf_impactwatertimeenable 0;fx_drawimpactdebris 1;fx_drawimpactdust 1;fx_drawmetalspark 1;cl_particle_batch_mode 0;tf_particles_disable_weather 0;mat_reduceparticles 0;r_drawflecks 1;cl_particle_retire_cost 0;alias particles_level echo particles=ultra"
 
@@ -901,8 +889,11 @@ alias ropes
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
-mat_tonemapping_occlusion_use_stencil 0 // Force disable stencil buffer for tonemapping
+r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
+r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
+r_occluderminarea 401 // Skip all occluders by default
+r_occludermincount 2 // Use the largest 2 occluders
+mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
 //r_pixelfog 1 // Use a pixel shader for fog if possible
@@ -917,8 +908,6 @@ mat_forcehardwaresync 1 // Keep the CPU submission within 1 to 2 frames of the G
 mat_managedtextures 0 // Disable managed textures which do not work in D3D9Ex
 mat_queue_mode -1 // Make sure ideal threading mode is on
 //mat_bufferprimitives 1 // Skip flushing of primitives when meshes draw
-
-alias cat_mm_queue_party"quit smoking"
 
 // ---------------
 // '-- FPS Cap --'
@@ -959,6 +948,8 @@ alias vsync_off"mat_vsync 0;alias vsync_level echo vsync=off"
 alias vsync_on"mat_vsync 1;alias vsync_level echo vsync=on"
 
 alias vsync
+
+alias cat_mm_queue_party"quit trolling"
 
 // --------------
 // '-- OpenGL --'
@@ -1242,7 +1233,7 @@ alias hud_contracts hud_contracts_auto
 alias hud_achievement_off"hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_description 0;hud_achievement_glowtime 0;hud_achievement_tracker 0;alias hud_achievement_level echo hud_achievement=off"
 alias hud_achievement_on"hud_achievement_count 8;hud_achievement_count_engineer 3;hud_achievement_description 1;hud_achievement_glowtime 2.5;hud_achievement_tracker 1;alias hud_achievement_level echo hud_achievement=on"
 
-alias hud_achievement hud_achievement_on
+alias hud_achievement hud_achievement_off
 
 // ------------
 // '-- Info --'
@@ -1622,8 +1613,6 @@ alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voic
 
 alias voice_chat voice_chat_on
 
-cat_detach
-
 // ------------
 // '-- Logo --'
 // ------------
@@ -1632,6 +1621,8 @@ alias logo_off"alias logo_level echo logo=off"
 alias logo_on"l0;alias logo_level echo logo=on"
 
 alias logo logo_on
+
+cat_detach
 
 // ===============
 // '--- Input ---'
@@ -1913,14 +1904,6 @@ alias mod_support=on"alias mod_support mod_support_on"
 alias party_mode=open"alias party_mode party_mode_open"
 alias party_mode=request"alias party_mode party_mode_request"
 alias party_mode=invite"alias party_mode party_mode_invite"
-alias ping_tolerance=off"alias ping_tolerance ping_tolerance_off"
-alias ping_tolerance=25"alias ping_tolerance ping_tolerance_25"
-alias ping_tolerance=50"alias ping_tolerance ping_tolerance_50"
-alias ping_tolerance=60"alias ping_tolerance ping_tolerance_60"
-alias ping_tolerance=70"alias ping_tolerance ping_tolerance_70"
-alias ping_tolerance=80"alias ping_tolerance ping_tolerance_80"
-alias ping_tolerance=90"alias ping_tolerance ping_tolerance_90"
-alias ping_tolerance=100"alias ping_tolerance ping_tolerance_100"
 alias logo=off"alias logo logo_off"
 alias logo=on"alias logo logo_on"
 
