--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.2 | April 11, 2022
+// Version: 9.9.0 | May 6, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -136,14 +136,11 @@ sdr_spew_level 0 // Disable SDR output
 
 tf_party_join_request_mode 1 // Mode for party join requests: 0 - open join, 1 - request join, 2 - invite join.
 
-tf_mm_custom_ping_enabled 1 // Enable custom ping tolerance
-tf_mm_custom_ping 50 // Ping tolerance for matchmaking
-
 // ===================
 // '--- Rendering ---'
 // ===================
 // -----------------------
-// '-- Level of Detail --'
+// '-- Model Quality --'
 // -----------------------
 // Controls the quality of objects based on distance
 
@@ -192,7 +189,6 @@ mat_reducefillrate 1 // Simplify material shading and use some DirectX 8 feature
 //r_dopixelvisibility 1 // Use pixel visibility system instead of line traces
 //r_pixelvisibility_partial 1 // Use partial visibility algorithm
 r_pixelvisibility_partial 0
-building_cubemaps 1 // Force some lighting effects off
 //mat_bumpmap 1 // Enable bumpmapping
 mat_bumpmap 0 // Disable bumpmapping materials
 //mat_specular 1 // Enable specular
@@ -277,7 +273,7 @@ tf_particles_disable_weather 1 // Disable rain, snow and ash particles
 mat_reduceparticles 1 // Reduce number of particles, but it only helps a little bit because the real performance impact comes from creating particle systems
 //r_drawflecks 1 // Draw flecks from impacts
 r_drawflecks 0 // Do not create particle systems when things hit surfaces, increases FPS and reduces distractions
-cl_particle_retire_cost .0001 // Remove particles larger than this fraction of 1000 screen area (does not work in autoexec)
+//cl_particle_retire_cost .0001 // Remove particles larger than this fraction of 1000 screen area (does not work in autoexec)
 //cl_particle_retire_cost 0 // Disable particle retirement (does not work in autoexec)
 
 // -----------------------
@@ -570,8 +566,11 @@ rope_wind_dist 0 // Do not apply CPU intensive wind to ropes
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
-mat_tonemapping_occlusion_use_stencil 0 // Force disable stencil buffer for tonemapping
+r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
+r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
+r_occluderminarea 401 // Skip all occluders by default
+r_occludermincount 2 // Use the largest 2 occluders
+mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
 //r_pixelfog 1 // Use a pixel shader for fog if possible
@@ -1260,7 +1259,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.8.2 | April 11, 2022"
+alias version_comfig"echo mastercomfig version: 9.9.0 | May 6, 2022"
 
 // Echo
 echo""
@@ -1274,8 +1273,8 @@ echo""
 echo""
 echo"  **********************************"
 echo"  **********************************"
-echo"  mastercomfig 9.8.2 loaded"
-echo"  April 11, 2022"
+echo"  mastercomfig 9.9.0 loaded"
+echo"  May 6, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1283,7 +1282,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 3 hours to produce."
+echo"  This release took 20 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
