don't filter out lighting on ultra

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -259,6 +259,7 @@ alias lod
 //r_maxdlights 32 // Use the maximum number of dynamic lights
 //r_maxdlights 12 // Reduce maximum dynamic lights
 //r_maxdlights 0 // Do not allow any dynamic lights
+//r_worldlightmin 0 // Do not filter out any lighting (helps slightly with ambient)
 //r_worldlightmin .0002 // Render practically all world lighting
 //r_worldlightmin .0004 // Do not render insignificant world lighting
 //r_worldlightmin 999999 // Reject all world lighting
@@ -291,7 +292,7 @@ alias lighting_medium"mat_filterlightmaps 1;alias lightmaps_override;r_ambientbo
 alias lighting_medium_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;r_pixelvisibility_partial 1;alias lighting_level echo lighting=medium_high"
 alias lighting_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=high"
 alias lighting_very_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=very_high"
-alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=ultra"
+alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin 0;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;r_pixelvisibility_partial 1;alias lighting_level echo lighting=ultra"
 
 alias lighting
 
