--- a/config/cfg/addons/opengl.cfg
+++ b/config/cfg/addons/opengl.cfg
@@ -3,12 +3,13 @@
 
 gl_pow2_tempmem 1
 mat_texture_reload_frame_swap_workaround 0
-//gl_mtglflush_at_tof 1
+gl_mtglflush_at_tof 1
 gl_debug_output 0
 gl_magnify_resolve_mode 1
 gl_batch_tex_creates 1
 gl_batch_tex_destroys 1
 gl_radar7954721_workaround_mixed 0
 gl_paircache_rows_lg2 11
+lighting_ex=high // Work around Mesa bug
 
 echo"OpenGL addon applied"
