--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.9.0 | May 6, 2022
+// Version: 9.10.0 | May 27, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -108,18 +108,20 @@ alias packet_rate packet_rate_standard
 //cl_interp_ratio 1;cl_interp .015 // 1 snapshot interpolation for lowest 
 //cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid issues where one snapshot is dropped once in a while. Safest option for most users.
 //cl_interp_ratio 3;cl_interp .045 // Protect more against packet loss, increase further for more buffer protection. Recommended only for users with an unstable connection.
+//cl_interp 0.1 // Useful for smooth animation, use it in offline recordings and singleplayer
 
 alias snapshot_buffer_auto"alias snapshot_buffer_level echo snapshot_buffer=auto"
 alias snapshot_buffer_high"cl_interp_ratio 3;setinfo cl_interp_ratio 3;interp_high;alias snapshot_buffer_level echo snapshot_buffer=high"
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
 alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer=low"
 alias snapshot_buffer_custom"alias snapshot_buffer_auto;alias snapshot_buffer_high;alias snapshot_buffer_safe;alias snapshot_buffer_low;alias net_hitscan;alias net_projectiles;alias net_spy;alias snapshot_buffer_level echo snapshot_buffer=custom"
+alias snapshot_buffer_anim"snapshot_buffer_custom;cl_interp 0.1;setinfo cl_interp 0.1;alias snapshot_buffer_level echo snapshot_buffer=anim"
 
 alias snapshot_buffer snapshot_buffer_auto
 
-alias net_hitscan snapshot_buffer_safe // Scout, Heavy, Engineer, Sniper
-alias net_projectiles snapshot_buffer_low // Soldier, Pyro, Demoman, Medic
-alias net_spy snapshot_buffer_low // Spy
+alias net_hitscan "snapshot_buffer_safe;cl_pred_optimize 2" // Scout, Heavy, Engineer, Sniper
+alias net_projectiles "snapshot_buffer_low;cl_pred_optimize 2" // Soldier, Pyro, Demoman, Medic
+alias net_spy "snapshot_buffer_low;cl_pred_optimize 1" // Spy
 
 // -------------------
 // '-- Packet Size --'
@@ -1700,6 +1702,7 @@ alias snapshot_buffer=high"alias snapshot_buffer snapshot_buffer_high"
 alias snapshot_buffer=safe"alias snapshot_buffer snapshot_buffer_safe"
 alias snapshot_buffer=low"alias snapshot_buffer snapshot_buffer_low"
 alias snapshot_buffer=custom"alias snapshot_buffer snapshot_buffer_custom"
+alias snapshot_buffer=anim"alias snapshot_buffer snapshot_buffer_anim"
 alias packet_size=small"alias packet_size packet_size_small"
 alias packet_size=conservative"alias packet_size packet_size_conservative"
 alias packet_size=saver"alias packet_size packet_size_saver"
@@ -1923,6 +1926,7 @@ alias class_config_sniper"exec overrides/sniper.cfg;exec user/sniper.cfg"
 alias class_config_spy"exec overrides/spy.cfg;exec user/spy.cfg"
 
 alias game_overrides_c"exec overrides/game_overrides.cfg;exec user/game_overrides.cfg"
+alias game_overrides_once_c
 
 // HUDs use mat_antialias together with a wait in the valve.rc file to force reloads. Do not let them.
 alias block_antialias"alias mat_antialias block_antialias_echo"
@@ -1948,5 +1952,5 @@ alias restore_config"exec autoexec.cfg"
 alias run_game_overrides"exec comfig/game_overrides.cfg;lightmaps_override"
 alias game_overrides"cheap_water_override;detail_props_override;shadowlod_override;lightmaps_override"
 
-alias game_overrides_once match_hud_once
+alias game_overrides_once"match_hud_once;game_overrides_once_c"
 block_game_overrides_once
