--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.9.0 | May 6, 2022
+// Version: 9.10.0 | May 27, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -81,6 +81,7 @@ cl_updaterate 66 // Get from server at this many times per second
 //cl_interp_ratio 1;cl_interp .015 // Minimal buffering time
 cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid issues where one snapshot is dropped once in a while. Safest option for most users.
 //cl_interp_ratio 3;cl_interp .045 // Protect more against packet loss, increase further for more buffer protection. Recommended only for users with an unstable connection.
+//cl_interp 0.1 // Useful for smooth animation, use it in offline recordings and singleplayer
 
 // -------------------
 // '-- Packet Size --'
@@ -1259,7 +1260,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.9.0 | May 6, 2022"
+alias version_comfig"echo mastercomfig version: 9.10.0 | May 27, 2022"
 
 // Echo
 echo""
@@ -1273,8 +1274,8 @@ echo""
 echo""
 echo"  **********************************"
 echo"  **********************************"
-echo"  mastercomfig 9.9.0 loaded"
-echo"  May 6, 2022"
+echo"  mastercomfig 9.10.0 loaded"
+echo"  May 27, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1282,7 +1283,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 20 hours to produce."
+echo"  This release took 100 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
