add note about pred optimize

--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -24,6 +24,7 @@ cl_timeout 60 // Max client timeout
 //cl_smooth 1 // Do not instantly correct prediction errors, as they are predominantly small enough to be smoothed over with negligible error and has less distracting jitters in view
 cl_smoothtime .05 // Decrease smooth time to reject large prediction errors faster
 //cl_pred_optimize 2 // Keep client-side prediction incrementally going within error bounds
+//cl_pred_optimize 1 // Do not tolerate any prediction error, useful for Spy (does not apply automatically in autoexec)
 //net_queued_packet_thread 1 // Keep thread on in case we start sending split packets
 //net_queued_packet_thread 581304 // Queue all packets
 //net_splitrate 1 // Number of fragments for a splitpacket that can be sent per frame
