we're going to try snapshot_buffer_safe for Spy again

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -121,7 +121,7 @@ alias snapshot_buffer snapshot_buffer_auto
 
 alias net_hitscan "snapshot_buffer_safe;cl_pred_optimize 2" // Scout, Heavy, Engineer, Sniper
 alias net_projectiles "snapshot_buffer_low;cl_pred_optimize 2" // Soldier, Pyro, Demoman, Medic
-alias net_spy "snapshot_buffer_low;cl_pred_optimize 1" // Spy
+alias net_spy "snapshot_buffer_safe;cl_pred_optimize 1" // Spy
 
 // -------------------
 // '-- Packet Size --'
