--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -889,10 +889,11 @@ alias ropes
 // --------------------
 // These settings will optimize TF2 without having any very noticeable effects to the user
 
+threadpool_affinity 0 // Disable affinity, allow the OS to schedule threads efficiently
 engine_no_focus_sleep 1 // Balance between power savings and background responsiveness
 //r_ForceWaterLeaf 1 // Optimization to visleafs
 //r_occlusion 1 // Use CPU to have the GPU skip rendering models/props you cannot see
-r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
+//r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
 r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
 r_occluderminarea 401 // Skip all occluders by default
 r_occludermincount 2 // Use the largest 2 occluders
