finalize for release

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.0 | May 27, 2022
+// Version: 9.10.0 | June 15, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -896,7 +896,7 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 //r_fastzreject 1 // Early Z pass. Uses the CPU to prevent overdraw.
 r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
 r_occluderminarea 401 // Skip all occluders by default
-r_occludermincount 2 // Use the largest 2 occluders
+r_occludermincount 4 // Use the largest 4 occluders
 mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
@@ -1520,8 +1520,9 @@ tf_dingalingaling_repeat_delay .007 // 1 per frame to prevent dupe hitsounds
 // -----------------
 // Threading options to take advantage of modern CPUs for the sound system
 
-snd_async_fullyasync 1 // Skip sound cache, load all sounds async
-snd_async_minsize 0 // ^
+snd_async_minsize 32768 // Load sounds async if they will not fit in a chunk
+//snd_async_fullyasync 1 // Skip sound cache, load all sounds async
+//snd_async_minsize 0 // ^
 
 // ---------------
 // '-- General --'
