--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.10.0 | May 27, 2022
+// Version: 9.10.0 | June 15, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -571,7 +571,7 @@ engine_no_focus_sleep 1 // Balance between power savings and background responsi
 r_fastzreject 0 // Early Z pass. Uses the CPU to prevent overdraw.
 r_occludeemaxarea 10 // Usually any entities larger than this will not fit into occluders
 r_occluderminarea 401 // Skip all occluders by default
-r_occludermincount 2 // Use the largest 2 occluders
+r_occludermincount 4 // Use the largest 4 occluders
 mat_tonemapping_occlusion_use_stencil 1 // Force enable stencil buffer for tonemapping. Works around driver bugs.
 r_norefresh 1 // Do not store a useless and unused frame time variable
 fast_fogvolume 1 // Fast path for one leaf water data
@@ -1090,8 +1090,9 @@ tf_dingalingaling_repeat_delay .007 // 1 per frame to prevent dupe hitsounds
 // -----------------
 // Threading options to take advantage of modern CPUs for the sound system
 
-snd_async_fullyasync 1 // Skip sound cache, load all sounds async
-snd_async_minsize 0 // ^
+snd_async_minsize 32768 // Load sounds async if they will not fit in a chunk
+//snd_async_fullyasync 1 // Skip sound cache, load all sounds async
+//snd_async_minsize 0 // ^
 
 // ---------------
 // '-- General --'
@@ -1261,7 +1262,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.10.0 | May 27, 2022"
+alias version_comfig"echo mastercomfig version: 9.10.0 | June 15, 2022"
 
 // Echo
 echo""
@@ -1276,7 +1277,7 @@ echo""
 echo"  **********************************"
 echo"  **********************************"
 echo"  mastercomfig 9.10.0 loaded"
-echo"  May 27, 2022"
+echo"  June 15, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1284,7 +1285,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 100 hours to produce."
+echo"  This release took 114 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
