June 21 TF2 update

--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -696,6 +696,7 @@ tf_scoreboard_ping_as_text 0 // Use inaccurate ping bars for ping in the scorebo
 //tf_hud_notification_duration 3 // How long notifications appear on screen
 //hud_takesshots 1 // Take a scoreboard screenshot at the end of the match
 //tf_mvm_min_players_to_start 1 // Start MvM with 1 player
+//net_disconnect_reason 1 // Show disconnect reasons
 
 //cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
 cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
@@ -791,8 +792,7 @@ cl_notifications_show_ingame 1 // Show notifications in game
 //cl_notifications_show_ingame 0 // Do not show notifications in game
 //tf_notifications_push_bottom 0 // Keep notifications at the top of the stack
 //tf_notifications_push_bottom 1 // Push notifications to the bottom of the stack
-//cl_vote_ui_active_after_voting 0 // Hide the vote UI after voting
-cl_vote_ui_active_after_voting 1 // Keep the vote UI active after voting to see the vote progress
+//cl_vote_non_input_alpha 150 // Transparency (0 to 255) of inactive vote panels
 //cl_vote_ui_show_notification 0 // Instantly show the vote UI when a vote is called
 //cl_vote_ui_show_notification 1 // Do not instantly show the vote UI when a vote is called. Instead, show a notification to see the vote.
 
