try to avoid material reloads every pause

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1950,8 +1950,8 @@ alias apply_user apply_overrides
 alias restore_preset"exec comfig/comfig.cfg;preset;run_modules"
 alias restore_config"exec autoexec.cfg"
 
-alias run_game_overrides"exec comfig/game_overrides.cfg;lightmaps_override"
-alias game_overrides"cheap_water_override;detail_props_override;shadowlod_override;lightmaps_override"
+alias run_game_overrides"exec comfig/game_overrides.cfg"
+alias game_overrides"cheap_water_override;detail_props_override;shadowlod_override"
 
-alias game_overrides_once"match_hud_once;game_overrides_once_c"
+alias game_overrides_once"match_hud_once;lightmaps_override;game_overrides_once_c"
 block_game_overrides_once
